# entity

./: .gitignore  CMakeLists.txt  README.md
private/: entity-index.cpp  entity.cpp  state.h
public/: entity.h
